# Google-Search

interface-graphique-main/: Cargo.toml  README.md
interface-graphique-main/src/: Dialog.glade  GoogleSearch.glade  about.glade  main.rs
