[package]
name = "interface-graphique"
version = "0.9.2"
authors = ["Tacherifte Aymen <ch.tacherifte@gmail.com>"]
authors = ["Carolina Vinkovic <carovinkovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {git = "https://github.com/gtk-rs/gtk.git"}

[features]
default = ["gtk/v3_24"] 


